--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600&display=swap');
+
+
+li, ul{
+  list-style: none;
+  font-weight: bold;
+  padding: 0;
+  margin: 0;
+}
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+
 }
 
-.App-link {
-  color: #61dafb;
+.body {
+  width: 50%;
+  display: flex;
+  /* justify-content: space-between; */
+  /* text-align: center; */
+  background-color: #e2ebee;
+  font-family: 'Raleway', sans-serif;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-field {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  /* margin: 0 auto; */
+  /* text-align: center; */
+}
+.search-field label{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.search-field button {
+  min-width: 50px;
+  min-height: 30px;
+  /* color: white; */
+  background-color: #82b2ff;
+  font-weight: 500;
+  font-size: 15px;
+  border-radius: 10px;
+  border: none;
+  color: #212121;
+}
+.search-area{
+  margin: 30px;
+}
+.search-area__list{
+  margin-top: 20px;
+}
+.search-area__list li{
+  width: 150px;
+  margin-bottom: 20px;
+  font-weight: 400;
+  cursor: pointer;
+}
+.search-area__list li:hover{
+  /* background-color: refd; */
+  font-size: 18px;
+  font-weight: 500;
+}
+.info-area{
+  margin-left: 20px;
+  margin-top: 10px;
+  width: 43%;
+}
+.info-area h1{
+  font-size: 20px;
+  /* text-align: center; */
+  margin: 25px auto;
+}
+.info-area__holiday{
+  display: flex;
+  gap: 10px;
+}
+.info-area__date{
+  text-decoration: underline;
+}
+.info-area__name{
+  font-weight: 500;
 }
